<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/sheriff_begin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:onClick="begin"
            android:text="@string/begin" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_players"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="italic" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/three_player_sheriff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="players"
                android:text="@string/three_player" />

            <RadioButton
                android:id="@+id/four_player_sheriff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="players"
                android:text="@string/four_player" />

            <RadioButton
                android:id="@+id/five_player_sheriff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="players"
                android:text="@string/five_player" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/sheriff_optional_goods"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="italic" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/optional_goods_included"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="optionalGoods"
                android:text="@string/yes" />

            <RadioButton
                android:id="@+id/optional_goods_not_included"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="optionalGoods"
                android:text="@string/no" />
        </RadioGroup>

        <TextView
            android:id="@+id/sheriff_player_names"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/player_names"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/sheriff_player_one_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/player_one"
            android:imeOptions="actionDone"
            android:inputType="textCapWords" />

        <EditText
            android:id="@+id/sheriff_player_two_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/player_two"
            android:imeOptions="actionDone"
            android:inputType="textCapWords" />

        <EditText
            android:id="@+id/sheriff_player_three_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/player_three"
            android:imeOptions="actionDone"
            android:inputType="textCapWords" />

        <EditText
            android:id="@+id/sheriff_player_four_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/player_four"
            android:imeOptions="actionDone"
            android:inputType="textCapWords" />

        <EditText
            android:id="@+id/sheriff_player_five_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/player_five"
            android:imeOptions="actionDone"
            android:inputType="textCapWords" />


    </LinearLayout>

</ScrollView>